# mysql_backup

./: .env.sample  README.md  mysql_backup.py  pyproject.toml  settings.py
